// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should show component with product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Card
  </span>
</div>
`;

exports[`ProductTitle should show the title component with a custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
